Uso de propiedades y clases de estilos en componentes de REACT

--- a/linkedin/mi-hero/src/components/hola-mundos/holamundo.css
+++ b/linkedin/mi-hero/src/components/hola-mundos/holamundo.css
@@ -1,3 +1,9 @@
 p {
     color: greenyellow;
 }
+
+.nota{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    color: red;
+}
